@@ -1,6 +1,7 @@
 2018-04-30 Release 4.7
 	- remove obsolete Python2 compatibility code
 	- add min and max methods to hxl.model.Dataset
+	- add "is min" and "is max" support to hxl.model.RowQuery
 	- add is_cached flag to hxl.model.Dataset and subclasses
 	- updated all AbstractInput to be iterables rather than iterators
 	  (for repeatability)
